cmake_minimum_required(VERSION 3.29)
project(acmipc)

set(CMAKE_CXX_STANDARD 17)

add_executable(1011 gold/5/1011/main.cpp)
add_executable(1032 bronze/1/1032/main.cpp)
add_executable(1010 silver/5/1010/main.cpp)
add_executable(2490 etc/2490/main.cpp)
add_executable(32953 bronze/1/32953/main.cpp)
add_executable(1672 bronze/1/1672/main.cpp)
add_executable(1037 bronze/1/1037/main.cpp)
add_executable(1019 platinum/5/1019/main.cpp)
add_executable(1557 diamond/5/1557/main.cpp)
add_executable(1094 silver/5/1094/1094.cpp)
add_executable(1181 silver/5/1181/1181.cpp)
