cmake_minimum_required(VERSION 3.29)
project(acmipc)

set(CMAKE_CXX_STANDARD 17)

add_executable(1032 bronze/1/1032.cpp)
add_executable(32953 bronze/1/32953.cpp)
add_executable(1672 bronze/1/1672.cpp)
add_executable(1037 bronze/1/1037.cpp)

add_executable(4153 bronze/3/4153.cpp)

add_executable(1008 bronze/5/1008.cpp)
add_executable(1330 bronze/5/1330.cpp)
add_executable(2438 bronze/5/2438.cpp)
add_executable(2739 bronze/5/2739.cpp)
add_executable(10950 bronze/5/10950.cpp)
add_executable(10951 bronze/5/10951.cpp)
add_executable(10952 bronze/5/10952.cpp)
add_executable(11654 bronze/5/11654.cpp)
add_executable(25083 bronze/5/25083.cpp)


add_executable(1557 diamond/5/1557.cpp)

add_executable(2490 etc/2490.cpp)

add_executable(1011 gold/5/1011.cpp)

add_executable(1019 platinum/5/1019.cpp)

add_executable(1015 silver/4/1015.cpp)

add_executable(1010 silver/5/1010.cpp)
add_executable(1094 silver/5/1094.cpp)
add_executable(1181 silver/5/1181.cpp)
add_executable(11723 silver/5/11723.cpp)
add_executable(1764 silver/4/1764.cpp)
add_executable(11399 silver/4/11399.cpp)
